--- a/ui/portal/Dockerfile
+++ b/ui/portal/Dockerfile
@@ -17,9 +17,25 @@ WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 
+# Accept build arguments for Clerk configuration (with default placeholders)
+ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_placeholder_for_build
+ARG CLERK_SECRET_KEY=sk_test_placeholder_for_build
+ARG NEXT_PUBLIC_DISCOVERY_API_URL=http://localhost:7001
+ARG NEXT_PUBLIC_INTERACTION_API_URL=http://localhost:7002
+ARG NEXT_PUBLIC_USER_API_URL=http://localhost:7003
+ARG NEXT_PUBLIC_CRAWLER_API_URL=http://localhost:7004
+ARG NEXT_PUBLIC_FONTAWESOME_KIT_URL=https://kit.fontawesome.com/fab812572f.js
+
 # Set environment variables for build
 ENV NEXT_TELEMETRY_DISABLED=1
 ENV NODE_ENV=production
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+ENV CLERK_SECRET_KEY=$CLERK_SECRET_KEY
+ENV NEXT_PUBLIC_DISCOVERY_API_URL=$NEXT_PUBLIC_DISCOVERY_API_URL
+ENV NEXT_PUBLIC_INTERACTION_API_URL=$NEXT_PUBLIC_INTERACTION_API_URL
+ENV NEXT_PUBLIC_USER_API_URL=$NEXT_PUBLIC_USER_API_URL
+ENV NEXT_PUBLIC_CRAWLER_API_URL=$NEXT_PUBLIC_CRAWLER_API_URL
+ENV NEXT_PUBLIC_FONTAWESOME_KIT_URL=$NEXT_PUBLIC_FONTAWESOME_KIT_URL
 
 # Build the application
 RUN npm run build
