--- a/.github/workflows/scale.yml
+++ b/.github/workflows/scale.yml
@@ -35,11 +35,24 @@ jobs:
               with:
                   creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+            - name: Install kubelogin
+              run: |
+                  # Download and install kubelogin for AAD-enabled AKS clusters
+                  curl -LO https://github.com/Azure/kubelogin/releases/download/v0.0.32/kubelogin-linux-amd64.zip
+                  unzip kubelogin-linux-amd64.zip
+                  sudo mv bin/linux_amd64/kubelogin /usr/local/bin/
+                  sudo chmod +x /usr/local/bin/kubelogin
+                  kubelogin --version
+
             - name: Set AKS context
               uses: azure/aks-set-context@v3
               with:
                   resource-group: ${{ env.AKS_RESOURCE_GROUP }}
                   cluster-name: ${{ env.AKS_CLUSTER_NAME }}
+
+            - name: Convert kubeconfig to use kubelogin
+              run: |
+                  kubelogin convert-kubeconfig -l azurecli
 
             - name: Scale deployment
               run: |
