fix: reorder Clerk authentication and health endpoint registration to prevent 500 errors feat: add Clerk environment variables to Kubernetes deployment configurations docs: add health endpoint fix documentation for API services and UI service feat: implement health check endpoint for UI service

--- a/k8s/base/crawler-service.yaml
+++ b/k8s/base/crawler-service.yaml
@@ -51,6 +51,11 @@ spec:
             secretKeyRef:
               name: stumbleable-secrets
               key: SUPABASE_SERVICE_KEY
+        - name: CLERK_PUBLISHABLE_KEY
+          valueFrom:
+            secretKeyRef:
+              name: stumbleable-secrets
+              key: CLERK_PUBLISHABLE_KEY
         - name: CLERK_SECRET_KEY
           valueFrom:
             secretKeyRef:
