--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -1,3 +1,18 @@
+apiVersion: cert-manager.io/v1
+kind: ClusterIssuer
+metadata:
+  name: stumbleable-encrypt
+  namespace: stumbleable
+spec:
+  acme:
+    email: support@stumbleable.com
+    server: https://acme-v02.api.letsencrypt.org/directory
+    privateKeySecretRef:
+      name: stumbleable-encrypt-account-key
+    solvers:
+      - http01:
+          ingress:
+            class: nginx
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -27,7 +42,7 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://stumbleable.com"
     
     # Certificate management (cert-manager)
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "stumbleable-encrypt"
 spec:
   ingressClassName: nginx
   tls:
@@ -72,7 +87,7 @@ spec:
           service:
             name: discovery-service
             port:
-              number: 7001
+              number: 8080
       
       # Interaction Service
       - path: /interaction
@@ -81,7 +96,7 @@ spec:
           service:
             name: interaction-service
             port:
-              number: 7002
+              number: 8080
       
       # User Service
       - path: /user
@@ -90,7 +105,7 @@ spec:
           service:
             name: user-service
             port:
-              number: 7003
+              number: 8080
       
       # Crawler Service (admin only - consider separate ingress or IP whitelist)
       - path: /crawler
@@ -99,4 +114,4 @@ spec:
           service:
             name: crawler-service
             port:
-              number: 7004
+              number: 8080
