feat: Add content moderation features including reports, domain reputation, and moderation queue tabs
- Implemented ContentReportsTab for managing content reports with resolve and dismiss actions.
- Created DomainReputationTab for editing domain reputation scores and notes.
- Developed ModerationQueueTab for reviewing content submissions with bulk action capabilities.
- Added ModerationStatsCards to display moderation statistics such as total items, approval rate, and average review time.
- Established AI crawling and training policy in ai.txt and robots.txt for responsible data usage.
- Generated sitemap.xml for improved SEO and content discoverability.

--- a/ui/portal/.env.example
+++ b/ui/portal/.env.example
@@ -1,7 +1,15 @@
 # Frontend Environment Configuration
-# API Service URLs
+
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_...
+CLERK_SECRET_KEY=sk_test_...
+
+# Service URLs
 NEXT_PUBLIC_DISCOVERY_API_URL=http://localhost:7001
 NEXT_PUBLIC_INTERACTION_API_URL=http://localhost:7002
+NEXT_PUBLIC_USER_API_URL=http://localhost:7003
+NEXT_PUBLIC_CRAWLER_API_URL=http://localhost:7004
+NEXT_PUBLIC_MODERATION_API_URL=http://localhost:7005
 
 # Development settings
 NODE_ENV=development
