--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -22,6 +22,7 @@ metadata:
   namespace: stumbleable
   annotations:
     # NGINX Ingress Controller annotations
+    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     
