--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
         "apis/interaction-service",
         "apis/user-service",
         "apis/crawler-service",
-        "apis/moderation-service"
+        "apis/moderation-service",
+        "apis/email-service"
     ],
     "scripts": {
         "setup": "node scripts/setup.js",
-        "dev": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red\" --prefix \"{name}\" \"npm:dev:*\"",
+        "dev": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red,white\" --prefix \"{name}\" \"npm:dev:*\"",
         "dev:ui": "powershell -Command \"cd ui/portal; npm run dev\"",
         "dev:discovery": "powershell -Command \"cd apis/discovery-service; npm run dev\"",
         "dev:interaction": "powershell -Command \"cd apis/interaction-service; npm run dev\"",
         "dev:user": "powershell -Command \"cd apis/user-service; npm run dev\"",
         "dev:crawler": "powershell -Command \"cd apis/crawler-service; npm run dev\"",
         "dev:moderation": "powershell -Command \"cd apis/moderation-service; npm run dev\"",
+        "dev:email": "powershell -Command \"Set-Location apis/email-service; npm run dev\"",
         "install:all": "node scripts/install-all.js",
         "install:ui": "powershell -Command \"cd ui/portal; npm install\"",
         "install:discovery": "powershell -Command \"cd apis/discovery-service; npm install\"",
@@ -27,6 +29,7 @@
         "install:user": "powershell -Command \"cd apis/user-service; npm install\"",
         "install:crawler": "powershell -Command \"cd apis/crawler-service; npm install\"",
         "install:moderation": "powershell -Command \"cd apis/moderation-service; npm install\"",
+        "install:email": "powershell -Command \"cd apis/email-service; npm install\"",
         "build": "npm run build:ui",
         "build:ui": "powershell -Command \"cd ui/portal; npm run build\"",
         "build:discovery": "powershell -Command \"cd apis/discovery-service; npm run build\"",
@@ -34,6 +37,7 @@
         "build:user": "powershell -Command \"cd apis/user-service; npm run build\"",
         "build:crawler": "powershell -Command \"cd apis/crawler-service; npm run build\"",
         "build:moderation": "powershell -Command \"cd apis/moderation-service; npm run build\"",
+        "build:email": "powershell -Command \"cd apis/email-service; npm run build\"",
         "start": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red\" --prefix \"{name}\" \"npm:start:*\"",
         "start:ui": "powershell -Command \"cd ui/portal; npm start\"",
         "start:discovery": "powershell -Command \"cd apis/discovery-service; npm start\"",
@@ -41,6 +45,7 @@
         "start:user": "powershell -Command \"cd apis/user-service; npm start\"",
         "start:crawler": "powershell -Command \"cd apis/crawler-service; npm start\"",
         "start:moderation": "powershell -Command \"cd apis/moderation-service; npm start\"",
+        "start:email": "powershell -Command \"cd apis/email-service; npm start\"",
         "test": "npm run test:ui",
         "test:ui": "powershell -Command \"cd ui/portal; npm test\"",
         "lint": "npm run lint:ui",
