--- a/ui/portal/package.json
+++ b/ui/portal/package.json
@@ -36,6 +36,7 @@
         "jest": "^30.2.0",
         "jest-environment-jsdom": "^30.2.0",
         "postcss": "^8.4.45",
+        "schema-dts": "^1.1.5",
         "tailwindcss": "^4.1.11",
         "tsx": "^4.20.6",
         "typescript": "^5.6.2"
