--- a/apis/email-service/package.json
+++ b/apis/email-service/package.json
@@ -24,7 +24,7 @@
         "resend": "^3.5.0",
         "@react-email/components": "^0.0.25",
         "@react-email/render": "^1.0.1",
-        "react": "^18.3.1",
+        "react": "19.1.0",
         "@supabase/supabase-js": "^2.45.4",
         "dotenv": "^16.4.5",
         "zod": "^3.23.8"
@@ -33,7 +33,7 @@
         "tsx": "^4.19.1",
         "typescript": "^5.6.2",
         "@types/node": "^20.16.10",
-        "@types/react": "^18.3.5",
+        "@types/react": "^19.1.15",
         "react-email": "^2.1.6"
     }
 }
