--- a/apis/og-service/package.json
+++ b/apis/og-service/package.json
@@ -20,7 +20,7 @@
         "fastify": "^5.6.1",
         "fastify-plugin": "^5.1.0",
         "pino-pretty": "^11.2.2",
-        "react": "^18.3.1",
+        "react": "19.1.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
