feat: add sign-out page and improve sign-out handling; update package.json to include prettier

--- a/apis/email-service/package.json
+++ b/apis/email-service/package.json
@@ -27,7 +27,8 @@
         "react": "19.1.0",
         "@supabase/supabase-js": "^2.45.4",
         "dotenv": "^16.4.5",
-        "zod": "^3.23.8"
+        "zod": "^3.23.8",
+        "prettier": "^3.0.0"
     },
     "devDependencies": {
         "tsx": "^4.19.1",
