--- a/ui/portal/package.json
+++ b/ui/portal/package.json
@@ -30,6 +30,7 @@
         "@types/jest": "^30.0.0",
         "@types/node": "^24.5.2",
         "@types/react": "^19.1.15",
+        "@types/react-dom": "^19.1.5",
         "autoprefixer": "^10.4.20",
         "daisyui": "^5.0.50",
         "eslint": "^9.9.0",
