--- a/apis/crawler-service/package.json
+++ b/apis/crawler-service/package.json
@@ -17,24 +17,25 @@
     "author": "Stumbleable Team",
     "license": "MIT",
     "dependencies": {
-        "fastify": "^5.6.1",
-        "@fastify/cors": "^10.1.0",
         "@clerk/fastify": "^2.4.34",
+        "@fastify/cors": "^10.1.0",
         "@supabase/supabase-js": "^2.45.4",
+        "cheerio": "^1.1.2",
         "dotenv": "^16.4.5",
-        "zod": "^3.23.8",
+        "fastify": "^5.6.1",
         "fastify-plugin": "^5.1.0",
+        "node-cron": "^3.0.3",
         "pino": "^9.4.0",
         "pino-pretty": "^11.2.2",
         "robots-parser": "^3.0.1",
         "rss-parser": "^3.13.0",
         "sitemapper": "^3.2.9",
-        "node-cron": "^3.0.3"
+        "zod": "^3.23.8"
     },
     "devDependencies": {
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.2",
         "@types/node": "^20.16.10",
-        "@types/node-cron": "^3.0.11"
+        "@types/node-cron": "^3.0.11",
+        "tsx": "^4.19.1",
+        "typescript": "^5.6.2"
     }
 }
