--- a/ui/portal/package.json
+++ b/ui/portal/package.json
@@ -20,6 +20,7 @@
         "next": "^15.4.6",
         "react": "19.1.0",
         "react-dom": "19.1.0",
+        "recharts": "^3.2.1",
         "schema-dts": "^1.1.2",
         "zod": "^3.23.8"
     },
