feat: Implement cascading metadata extraction and enhancement tracking
- Added cascading fallback system for metadata extraction in the crawler service, prioritizing semantic HTML, SEO/social meta tags, and generic HTML.
- Introduced automatic enhancement after crawling, eliminating manual batch processing.
- Enhanced validation and cleaning for extracted metadata fields (title, description, image, author, date, content).
- Implemented logging for extraction sources to improve debugging and optimization.
- Added `metadata_scraped_at` timestamp to track processed records and prevent reprocessing.
- Updated API client and frontend components to reflect changes in metadata enhancement status.
- Created scripts for forcing rollout of services in AKS to ensure deployments are applied correctly.
- Updated deployment manifests and GitHub Actions workflow for automatic updates of AKS pods.

--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -148,6 +148,8 @@ jobs:
                   else
                     echo "IMAGE_TAG=${{ github.ref_name }}-${{ github.sha }}" >> $GITHUB_OUTPUT
                   fi
+                  # Generate unique deployment timestamp to force rolling update
+                  echo "DEPLOYMENT_TIMESTAMP=$(date +%s)" >> $GITHUB_OUTPUT
 
             - name: Deploy ConfigMap
               run: |
@@ -155,6 +157,7 @@ jobs:
               env:
                   ACR_NAME: ${{ env.ACR_NAME }}
                   IMAGE_TAG: ${{ steps.image-tag.outputs.IMAGE_TAG }}
+                  DEPLOYMENT_TIMESTAMP: ${{ steps.image-tag.outputs.DEPLOYMENT_TIMESTAMP }}
 
             - name: Deploy services
               run: |
@@ -166,6 +169,7 @@ jobs:
               env:
                   ACR_NAME: ${{ env.ACR_NAME }}
                   IMAGE_TAG: ${{ steps.image-tag.outputs.IMAGE_TAG }}
+                  DEPLOYMENT_TIMESTAMP: ${{ steps.image-tag.outputs.DEPLOYMENT_TIMESTAMP }}
 
             - name: Wait for deployments
               run: |
