--- a/k8s/base/discovery-service.yaml
+++ b/k8s/base/discovery-service.yaml
@@ -9,6 +9,11 @@ metadata:
     component: api
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: discovery-service
@@ -17,10 +22,13 @@ spec:
       labels:
         app: discovery-service
         component: api
+      annotations:
+        deployment.timestamp: "${DEPLOYMENT_TIMESTAMP}"
     spec:
       containers:
       - name: discovery-service
         image: ${ACR_NAME}.azurecr.io/stumbleable-discovery:${IMAGE_TAG}
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
           name: http
