--- a/k8s/base/moderation-service.yaml
+++ b/k8s/base/moderation-service.yaml
@@ -9,6 +9,11 @@ metadata:
     component: api
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: moderation-service
@@ -17,10 +22,13 @@ spec:
       labels:
         app: moderation-service
         component: api
+      annotations:
+        deployment.timestamp: "${DEPLOYMENT_TIMESTAMP}"
     spec:
       containers:
       - name: moderation-service
         image: ${ACR_NAME}.azurecr.io/stumbleable-moderation:${IMAGE_TAG}
+        imagePullPolicy: Always
         ports:
         - containerPort: 8080
           name: http
