--- a/k8s/base/ui-portal.yaml
+++ b/k8s/base/ui-portal.yaml
@@ -9,6 +9,11 @@ metadata:
     component: frontend
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: ui-portal
@@ -17,10 +22,13 @@ spec:
       labels:
         app: ui-portal
         component: frontend
+      annotations:
+        deployment.timestamp: "${DEPLOYMENT_TIMESTAMP}"
     spec:
       containers:
       - name: ui-portal
         image: ${ACR_NAME}.azurecr.io/stumbleable-ui:${IMAGE_TAG}
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
           name: http
