feat: Update package dependencies and TypeScript configuration for React compatibility

--- a/apis/email-service/tsconfig.json
+++ b/apis/email-service/tsconfig.json
@@ -18,7 +18,13 @@
         "jsx": "react",
         "types": [
             "node"
-        ]
+        ],
+        "baseUrl": ".",
+        "paths": {
+            "react": [
+                "./node_modules/@types/react"
+            ]
+        }
     },
     "include": [
         "src/**/*"
