--- a/apis/email-service/package.json
+++ b/apis/email-service/package.json
@@ -19,22 +19,22 @@
     "author": "Stumbleable Team",
     "license": "MIT",
     "dependencies": {
-        "fastify": "^4.28.1",
         "@fastify/cors": "^9.0.1",
-        "resend": "^3.5.0",
         "@react-email/components": "^0.0.25",
         "@react-email/render": "^1.0.1",
-        "react": "19.1.0",
         "@supabase/supabase-js": "^2.45.4",
         "dotenv": "^16.4.5",
-        "zod": "^3.23.8",
-        "prettier": "^3.0.0"
+        "fastify": "^4.28.1",
+        "prettier": "^3.0.0",
+        "react": "19.1.0",
+        "resend": "^3.5.0",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.2",
         "@types/node": "^20.16.10",
         "@types/react": "^19.1.15",
-        "react-email": "^2.1.6"
+        "react-email": "^2.1.6",
+        "tsx": "^4.19.1",
+        "typescript": "^5.6.2"
     }
 }
