--- a/apis/crawler-service/package.json
+++ b/apis/crawler-service/package.json
@@ -19,8 +19,10 @@
     "dependencies": {
         "@clerk/fastify": "^2.4.34",
         "@fastify/cors": "^10.1.0",
+        "@fastify/multipart": "^9.0.1",
         "@supabase/supabase-js": "^2.45.4",
         "cheerio": "^1.1.2",
+        "csv-parse": "^5.5.6",
         "dotenv": "^16.4.5",
         "fastify": "^5.6.1",
         "fastify-plugin": "^5.1.0",
