--- a/apis/email-service/package.json
+++ b/apis/email-service/package.json
@@ -19,22 +19,24 @@
     "author": "Stumbleable Team",
     "license": "MIT",
     "dependencies": {
-        "@fastify/cors": "^9.0.1",
-        "@react-email/components": "^0.0.25",
-        "@react-email/render": "^1.0.1",
-        "@supabase/supabase-js": "^2.45.4",
+        "@fastify/cors": "^11.1.0",
+        "@react-email/components": "^0.5.6",
+        "@react-email/render": "^1.3.2",
+        "@supabase/supabase-js": "^2.74.0",
         "dotenv": "^16.4.5",
-        "fastify": "^4.28.1",
-        "prettier": "^3.0.0",
-        "react": "19.1.0",
-        "resend": "^3.5.0",
-        "zod": "^3.23.8"
+        "fastify": "^5.6.1",
+        "prettier": "^3.6.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "resend": "^6.1.2",
+        "zod": "^4.1.12"
     },
     "devDependencies": {
-        "@types/node": "^20.16.10",
-        "@types/react": "^19.1.15",
-        "react-email": "^2.1.6",
-        "tsx": "^4.19.1",
-        "typescript": "^5.6.2"
+        "@types/node": "^24.7.0",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.3",
+        "react-email": "^4.3.0",
+        "tsx": "^4.20.6",
+        "typescript": "^5.9.3"
     }
 }
