--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -42,6 +42,9 @@ jobs:
                     - name: moderation
                       context: ./apis/moderation-service
                       dockerfile: ./apis/moderation-service/Dockerfile
+                    - name: email
+                      context: ./apis/email-service
+                      dockerfile: ./apis/email-service/Dockerfile
 
         steps:
             - name: Checkout code
@@ -87,6 +90,7 @@ jobs:
                       NEXT_PUBLIC_USER_API_URL=https://api.stumbleable.com/user
                       NEXT_PUBLIC_CRAWLER_API_URL=https://api.stumbleable.com/crawler
                       NEXT_PUBLIC_MODERATION_API_URL=https://api.stumbleable.com/moderation
+                      NEXT_PUBLIC_EMAIL_API_URL=https://api.stumbleable.com/email
                       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
 
     # Deploy to AKS
@@ -138,6 +142,7 @@ jobs:
                     --from-literal=CLERK_PUBLISHABLE_KEY="${{ secrets.CLERK_PUBLISHABLE_KEY }}" \
                     --from-literal=CLERK_SECRET_KEY="${{ secrets.CLERK_SECRET_KEY }}" \
                     --from-literal=CLERK_WEBHOOK_SECRET="${{ secrets.CLERK_WEBHOOK_SECRET }}" \
+                    --from-literal=RESEND_API_KEY="${{ secrets.RESEND_API_KEY }}" \
                     --dry-run=client -o yaml | kubectl apply -f -
 
             - name: Set image tag
@@ -179,6 +184,7 @@ jobs:
                   kubectl rollout status deployment/user-service -n ${{ env.NAMESPACE }} --timeout=5m
                   kubectl rollout status deployment/crawler-service -n ${{ env.NAMESPACE }} --timeout=5m
                   kubectl rollout status deployment/moderation-service -n ${{ env.NAMESPACE }} --timeout=5m
+                  kubectl rollout status deployment/email-service -n ${{ env.NAMESPACE }} --timeout=5m
 
             - name: Verify deployments
               run: |
@@ -208,8 +214,11 @@ jobs:
                   kubectl run curl-test-moderation --image=curlimages/curl:latest --restart=Never -n ${{ env.NAMESPACE }} -- \
                     curl -f http://moderation-service:7005/health || true
 
+                  kubectl run curl-test-email --image=curlimages/curl:latest --restart=Never -n ${{ env.NAMESPACE }} -- \
+                    curl -f http://email-service:7006/health || true
+
                   # Cleanup test pods
-                  kubectl delete pod curl-test curl-test-discovery curl-test-interaction curl-test-user curl-test-moderation -n ${{ env.NAMESPACE }} --ignore-not-found=true
+                  kubectl delete pod curl-test curl-test-discovery curl-test-interaction curl-test-user curl-test-moderation curl-test-email -n ${{ env.NAMESPACE }} --ignore-not-found=true
 
     # Notify on completion
     notify:
