--- a/k8s/base/moderation-service.yaml
+++ b/k8s/base/moderation-service.yaml
@@ -64,6 +64,21 @@ spec:
             secretKeyRef:
               name: stumbleable-secrets
               key: CLERK_SECRET_KEY
+        - name: ALLOWED_ORIGINS
+          valueFrom:
+            configMapKeyRef:
+              name: stumbleable-config
+              key: ALLOWED_ORIGINS
+        - name: RATE_LIMIT_MAX
+          valueFrom:
+            configMapKeyRef:
+              name: stumbleable-config
+              key: RATE_LIMIT_MAX
+        - name: RATE_LIMIT_WINDOW
+          valueFrom:
+            configMapKeyRef:
+              name: stumbleable-config
+              key: RATE_LIMIT_WINDOW
         - name: USER_SERVICE_URL
           value: "http://user-service:7003"
         resources:
