fix: Add .js extensions to all imports in email templates and update TypeScript configuration for ES module compatibility

--- a/apis/email-service/tsconfig.json
+++ b/apis/email-service/tsconfig.json
@@ -5,7 +5,7 @@
         "lib": [
             "ES2022"
         ],
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "esModuleInterop": true,
         "skipLibCheck": true,
         "strict": true,
