fix: resolve Clerk user ID to internal UUID for scheduled job triggers
- Implemented user ID resolution in the scheduler service to convert Clerk user IDs to internal UUIDs before inserting into the scheduled_jobs table.
- Updated the createExecutionRecord function to handle user lookups and insert NULL if the user cannot be resolved.
- Enhanced error handling and logging for user resolution failures.
- Consolidated tasks documentation into a single file for better clarity and maintenance.
- Added Kubernetes deployment and service configuration for the scheduler service.
- Updated the admin UI for managing scheduled jobs, including job triggering and cron expression editing.

--- a/.github/workflows/deploy-aks.yml
+++ b/.github/workflows/deploy-aks.yml
@@ -45,6 +45,9 @@ jobs:
                     - name: email
                       context: ./apis/email-service
                       dockerfile: ./apis/email-service/Dockerfile
+                    - name: scheduler
+                      context: ./apis/scheduler-service
+                      dockerfile: ./apis/scheduler-service/Dockerfile
 
         steps:
             - name: Checkout code
@@ -91,6 +94,7 @@ jobs:
                       NEXT_PUBLIC_CRAWLER_API_URL=https://api.stumbleable.com/crawler
                       NEXT_PUBLIC_MODERATION_API_URL=https://api.stumbleable.com/moderation
                       NEXT_PUBLIC_EMAIL_API_URL=https://api.stumbleable.com/email
+                      NEXT_PUBLIC_SCHEDULER_API_URL=https://api.stumbleable.com/scheduler
                       NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
 
     # Deploy to AKS
@@ -185,6 +189,7 @@ jobs:
                   kubectl rollout status deployment/crawler-service -n ${{ env.NAMESPACE }} --timeout=5m
                   kubectl rollout status deployment/moderation-service -n ${{ env.NAMESPACE }} --timeout=5m
                   kubectl rollout status deployment/email-service -n ${{ env.NAMESPACE }} --timeout=5m
+                  kubectl rollout status deployment/scheduler-service -n ${{ env.NAMESPACE }} --timeout=5m
 
             - name: Verify deployments
               run: |
@@ -217,8 +222,11 @@ jobs:
                   kubectl run curl-test-email --image=curlimages/curl:latest --restart=Never -n ${{ env.NAMESPACE }} -- \
                     curl -f http://email-service:7006/health || true
 
+                  kubectl run curl-test-scheduler --image=curlimages/curl:latest --restart=Never -n ${{ env.NAMESPACE }} -- \
+                    curl -f http://scheduler-service:7007/health || true
+
                   # Cleanup test pods
-                  kubectl delete pod curl-test curl-test-discovery curl-test-interaction curl-test-user curl-test-moderation curl-test-email -n ${{ env.NAMESPACE }} --ignore-not-found=true
+                  kubectl delete pod curl-test curl-test-discovery curl-test-interaction curl-test-user curl-test-moderation curl-test-email curl-test-scheduler -n ${{ env.NAMESPACE }} --ignore-not-found=true
 
     # Notify on completion
     notify:
