--- a/apis/email-service/package.json
+++ b/apis/email-service/package.json
@@ -25,6 +25,7 @@
         "@supabase/supabase-js": "^2.74.0",
         "dotenv": "^16.4.5",
         "fastify": "^5.6.1",
+        "node-cron": "^3.0.3",
         "prettier": "^3.6.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -33,6 +34,7 @@
     },
     "devDependencies": {
         "@types/node": "^24.7.0",
+        "@types/node-cron": "^3.0.11",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.3",
         "react-email": "^4.3.0",
