--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "apis/crawler-service",
         "apis/moderation-service",
         "apis/email-service",
-        "apis/og-service"
+        "apis/og-service",
+        "apis/scheduler-service"
     ],
     "scripts": {
         "setup": "node scripts/setup.js",
-        "dev": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red,white,brightBlue\" --prefix \"{name}\" \"npm:dev:*\"",
+        "dev": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red,white,brightBlue,brightGreen\" --prefix \"{name}\" \"npm:dev:*\"",
         "dev:ui": "powershell -Command \"cd ui/portal; npm run dev\"",
         "dev:discovery": "powershell -Command \"cd apis/discovery-service; npm run dev\"",
         "dev:interaction": "powershell -Command \"cd apis/interaction-service; npm run dev\"",
@@ -24,6 +25,7 @@
         "dev:moderation": "powershell -Command \"cd apis/moderation-service; npm run dev\"",
         "dev:email": "powershell -Command \"Set-Location apis/email-service; npm run dev\"",
         "dev:og": "powershell -Command \"cd apis/og-service; npm run dev\"",
+        "dev:scheduler": "powershell -Command \"cd apis/scheduler-service; npm run dev\"",
         "install:all": "node scripts/install-all.js",
         "install:ui": "powershell -Command \"cd ui/portal; npm install\"",
         "install:discovery": "powershell -Command \"cd apis/discovery-service; npm install\"",
@@ -33,6 +35,7 @@
         "install:moderation": "powershell -Command \"cd apis/moderation-service; npm install\"",
         "install:email": "powershell -Command \"cd apis/email-service; npm install\"",
         "install:og": "powershell -Command \"cd apis/og-service; npm install\"",
+        "install:scheduler": "powershell -Command \"cd apis/scheduler-service; npm install\"",
         "build": "npm run build:ui",
         "build:ui": "powershell -Command \"cd ui/portal; npm run build\"",
         "build:discovery": "powershell -Command \"cd apis/discovery-service; npm run build\"",
@@ -42,6 +45,7 @@
         "build:moderation": "powershell -Command \"cd apis/moderation-service; npm run build\"",
         "build:email": "powershell -Command \"cd apis/email-service; npm run build\"",
         "build:og": "powershell -Command \"cd apis/og-service; npm run build\"",
+        "build:scheduler": "powershell -Command \"cd apis/scheduler-service; npm run build\"",
         "start": "concurrently --kill-others-on-fail --prefix-colors \"blue,green,yellow,magenta,cyan,red,white\" --prefix \"{name}\" \"npm:start:*\"",
         "start:ui": "powershell -Command \"cd ui/portal; npm start\"",
         "start:discovery": "powershell -Command \"cd apis/discovery-service; npm start\"",
@@ -51,6 +55,7 @@
         "start:moderation": "powershell -Command \"cd apis/moderation-service; npm start\"",
         "start:email": "powershell -Command \"cd apis/email-service; npm start\"",
         "start:og": "powershell -Command \"cd apis/og-service; npm start\"",
+        "start:scheduler": "powershell -Command \"cd apis/scheduler-service; npm start\"",
         "test": "npm run test:ui",
         "test:ui": "powershell -Command \"cd ui/portal; npm test\"",
         "lint": "npm run lint:ui",
